<resources>
    <string name="app_name">NewCookBook</string>
    <string name="favorite">Favorite</string>
    <string name="calories">Calories</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="menu">Menu</string>
    <string name="name">Name</string>
    <string name="settings">Settings</string>
    <string name="loading">Loading…</string>
    <string name="today">Today</string>
    <string name="ingredients">Ingredients</string>
    <string name="steps">Steps</string>
    <string name="ready">Ready</string>
    <string name="of"> of</string>
    <string name="hint">num</string>
    <string name="search_here">Find recipes here</string>
    <string name="finding">Finding recipes…</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="step">Step</string>
    <string name="searchIngredient">Search Ingredients</string>
    <string name="searchAnother">Nothing Found</string>
    <string name="errorEmpty">Cannot be empty</string>





</resources>