<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".view.AddActivity">
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/images">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <ImageButton
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/mainPhotoButton"
                android:background="@drawable/main_photo_button"
                android:src="@drawable/ic_baseline_add_24"
                android:layout_marginEnd="10dp"/>
            <ImageButton
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/not_main_photo_button"
                android:layout_marginEnd="10dp"
                android:id="@+id/notMainPhoto1"
                android:src="@drawable/ic_baseline_add_24"/>

            <ImageButton
                android:id="@+id/notMainPhoto2"
                android:layout_width="100dp"
                android:layout_marginEnd="10dp"
                android:layout_height="100dp"
                android:background="@drawable/not_main_photo_button"
                android:src="@drawable/ic_baseline_add_24" />

            <ImageButton
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/not_main_photo_button"
                android:id="@+id/notMainPhoto3"
                android:src="@drawable/ic_baseline_add_24"/>
            <ImageButton
                android:layout_width="100dp"
                android:layout_marginEnd="10dp"
                android:layout_height="100dp"
                android:background="@drawable/not_main_photo_button"
                android:id="@+id/notMainPhoto4"
                android:src="@drawable/ic_baseline_add_24"/>
        </LinearLayout>
    </HorizontalScrollView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:boxStrokeColor="@android:color/holo_green_light"
        app:errorEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/images">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:singleLine="true"
            android:hint="@string/name"
            android:id="@+id/nameText"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/descriptionLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameLayout"
        android:paddingTop="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:errorEnabled="true"
        app:boxStrokeColor="@android:color/holo_green_light">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/descriptionText"
            android:hint="@string/description"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/categoryLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionLayout"
        android:paddingTop="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:clickable="true"
        app:boxStrokeColor="@android:color/holo_green_light"
        android:focusable="true">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/categoryText"
            android:hint="@string/category"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ingredientText"
        app:layout_constraintTop_toBottomOf="@id/categoryLayout"
        android:text="@string/ingredients"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textSize="20sp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ingredientText"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="10dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:id="@+id/ingredients"/>

    <ImageButton
        android:id="@+id/addIngredient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_add_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ingredients"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/stepsText"
        app:layout_constraintTop_toBottomOf="@id/addIngredient"
        android:text="@string/steps"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textSize="20sp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/stepsText"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="10dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:id="@+id/steps"/>

    <ImageButton
        android:id="@+id/addStep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_add_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/steps"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/addStep"
        android:background="@android:color/holo_blue_light"
        android:text="@string/ready"
        android:fontFamily="sans-serif-light"
        android:textSize="20sp"
        android:id="@+id/readyBtn"/>
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>